Fixing font weight bug on Firefox and Safari

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1445,7 +1445,8 @@ h1 {
   font-size: 28px;
   line-height: 35px;
   color: #000000;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  font-weight: normal; }
   @media (min-width: 375px) {
     h1 {
       font-size: 34px;
@@ -1470,7 +1471,8 @@ h1 {
   font-family: "Gilroy-SemiBold", Helvetica, sans-serif !important;
   font-size: 28px !important;
   line-height: 35px !important;
-  color: #000000 !important; }
+  color: #000000 !important;
+  font-weight: normal !important; }
   @media (min-width: 375px) {
     .homepage-header {
       font-size: 36px !important;
@@ -1490,7 +1492,8 @@ h2 {
   font-family: "Gilroy-SemiBold", Helvetica, sans-serif;
   font-size: 25px;
   line-height: 31px;
-  color: #000000; }
+  color: #000000;
+  font-weight: normal; }
   @media (min-width: 768px) {
     h2 {
       font-size: 30px;
@@ -1507,7 +1510,8 @@ h2 {
 h3 {
   font-family: "Gilroy-SemiBold", Helvetica, sans-serif;
   font-size: 20px;
-  color: #000000; }
+  color: #000000;
+  font-weight: normal; }
   @media (min-width: 768px) {
     h3 {
       font-size: 22px; } }
@@ -1522,7 +1526,8 @@ p {
   font-family: "Gilroy-Regular", Helvetica, sans-serif;
   color: rgba(0, 0, 0, 0.45);
   font-size: 16px;
-  line-height: 22px; }
+  line-height: 22px;
+  font-weight: normal; }
   @media (min-width: 1190px) {
     p {
       font-size: 20px;
